--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .rightAnswer, .right-Answer:hover{
     background-color: #6ab04c;
     border-color: #6ab04c;
-    color:#fff
+    color:#1d3557
 }
 .wrongAnswer, .wrongAnswer:hover{
     background-color:#b33030;
@@ -20,5 +20,86 @@
 #next{
     margin-top:8cm;
     cursor: pointer;
-    color: green;
+    color: #1d3557;
 }
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #e63946 50%, #a8dadc 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+.content {
+  background-color:#f1faee;
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0,0,0,.25);
+  box-sizing:border-box;
+  left:50%;
+  padding:10vmin;
+  position:fixed;
+  text-align:center;
+  top:50%;
+  transform:translate(-50%, -50%);
+}
+
+h1 {
+  font-family:monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
+#refesh{
+    align-items: center;
+}
+button {
+    padding: 1.3em 3em;
+    float: right ;
+    margin: 5%;
+    display: center;
+    margin-right: 5px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  button:hover {
+    background-color: #1d3557;
+    box-shadow: 0px 15px 20px #e63946;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+  
+  button:active {
+    transform: translateY(-1px);
+  }
+    
+
